2011-08-09 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-70
	* Update confdb.properties using the right TEST2R host name. (bug 85323).
	
2011-08-05 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-69
	* Update tag version in About dialog.
	
2011-08-05 Andrea Bocci  <andrea.bocci@cern.ch>
	* tag V01-05-68
	* hack to allow wildcards in smart prescales

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-67
	* Temporarily disable the Deep import dialog.

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-66
	* Change About Dialog. Update message and contact person.
	* Add Alert dialog using Diff for "Deep Import" feature. 

2011-08-04 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-65
	* Change "Clone" option name to "Deep Clone".
	* Change "Copy" option name to "Clone".

2011-07-22 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-64
	* Add "Copy Sequence" option (bug/feature 75955).
	* Add "Copy Path" option (bug/feature 75955).
	* Add "Enable Path cloning" under "Options" menu. (bug/feature 75955).

2011-07-19 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-63 
	* Set empty scalar assignment to "None" in Python converter. bug 84064
	* Add "Clone sequence" option. (bug/feature 75955).
	* Add "Clone path" option. (bug/feature 75955).

2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-62
	* Include MessageLoggerDialog changes.	(Andrea).

2011-07-13 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-61
	* Remove ClassCastException passing the mouse over module nodes. bug 84305
	* Set empty scalar parameter to "None" by default in Python converter. bug 84064
	* Add "Clone Module" feature for Paths and Sequences. (bug/feature 83912).

2011-07-07 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-60